style: fix footer alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -188,5 +188,5 @@
 /* Footer Component */
 
 .footer{
-  @apply flex flex-col gap-6 px-1 justify-center items-center text-white py-12 bg-primary relative mb-0
+  @apply text-center flex flex-col gap-6 px-1 justify-center items-center text-white py-12 bg-primary relative mb-0
 }
